- 
    
Bug
 - 
    Resolution: Done
 - 
    
  Not Evaluated                     
     - 
    Qt Creator 3.4.0
 - 
    None
 - 
    OS X Yosemite, Version 10.10.3
since Qt Creator 2.x.x. (I had the problem for quite some time but didn't bother to report) 
The output in the CMake Wizard is out of order. The messages are always put to the top and sometimes the formatting is completely off (see the attached files for an example). The problem doesn't seem to show with STATUS messages.
You might want to run CMake several times. With bigger CMake projects the problem occurs more likely.
| For Gerrit Dashboard: QTCREATORBUG-14439 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 112398,2 | CMakeRunPage: Fix appending of error messages | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |