CMakeRunPage: Fix appending of error messages

Change-Id: I2b1c54bbe948ca8b3ba5384a2e97e29b2fd878c9
Task-number: QTCREATORBUG-14439
Reviewed-by: Tobias Hunger <tobias.hunger@theqtcompany.com>